--- a/index.html
+++ b/index.html
@@ -1,110 +1,104 @@
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/comlinkjs@3.1.1/umd/comlink.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.4/bluebird.min.js"></script>
-
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.1.1/dropzone.css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.1.1/basic.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.1.1/dropzone.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/comlinkjs@3.1.1/umd/comlink.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.4/bluebird.min.js"></script>
+    <style>
+        input, button {
+            font-size: 1.1rem;
+        }
+    </style>
 </head>
+
 <body>
-<h2>Demo of using wasm to extract first page of PDF</h2>
-<div>Note: May not work on Android</div>
-<form action=""
-      class="dropzone"
-      id="my-drop-zone"></form>
+    <h2>パスワードロックを解除したPDFを生成するやつ</h2>
+    <div>一切ファイルをアップロードしないことが特長。</div>
+    <div>パスワード解析器ではないので、パスワードがわかっていることが前提です。</div>
+    <b>ファイル</b><br />
+    <input type="file" id="file" /><br />
+    <b>パスワード</b><br />
+    <input type="text" id="pwd"><br />
+    <br />
+    <button id="go">解除</button>
+    <br /><br />
+    <textarea id="outtext" style="max-width: calc(100vw - 32px); width: 800px; height: 500px;"></textarea>
 
-<textarea id="outtext" rows=24 cols=80>
-Output: (More in DevTools Console)
-</textarea>
+    <div style="margin-top: 20px;"></div>
+    <a href="https://github.com/cutls/wasm-pdf-pwd-unlock">https://github.com/cutls/wasm-pdf-pwd-unlock</a>
+    </div>
 
-<div style="margin-top: 20px;">
-    Using <a href="https://github.com/hhrutter/pdfcpu">https://github.com/hhrutter/pdfcpu</a>
-</div>
-
-<script>
-(async function() {
-    if (!WebAssembly.instantiateStreaming) { // polyfill
-        WebAssembly.instantiateStreaming = async (resp, importObject) => {
-            const source = await (await resp).arrayBuffer()
-                return await WebAssembly.instantiate(source, importObject)
-        }
-    }
-    Dropzone.autoDiscover = false;
-
-    let myDropZone = new Dropzone('#my-drop-zone', {
-        url: '#',
-        acceptedFiles: ".pdf",
-        maxFiles: 1,
-        autoProcessQueue: false, // don't do real uploading (HTTP POST)
-        addRemoveLinks: true,
-        // previewTemplate: document.querySelector('#preview-template').innerHTML,
-        maxFilesize: Number.MAX_SAFE_INTEGER, // i.e. do not impose file size limit on DropZone, because we are not uploading any file
-        accept: function(file, done) {
-            console.log(file)
-            done()
-            processPDF(this.getAcceptedFiles()[0])
-        }
-    });
-
-    document.querySelector('div.dz-message span').innerText = "Drop PDF file here or click to select, only 1 file supported"
-
-    let GoWorker = Comlink.proxy(new Worker('worker.js'));
-    console.log("pre inst");
-    let worker = await new GoWorker();
-    console.log("post inst");
-
-    let outtext = document.querySelector("#outtext");
-
-    async function processPDF(file) {
-        let st = Date.now();
-        outtext.value += `Reading file ${file.name} ...\n`;
-        let reader = new FileReader();
-        async function callback(e) {
-            outtext.value += `DONE Reading file (took: ${Date.now() - st} ms)\n`;
-
-            let buffer = e.target.result.slice();
-
-            st = Date.now();
-            outtext.value += "Validating file...\n";
-            let result = await worker.validate(buffer);
-            outtext.value += `Done Validating file (took: ${Date.now() - st} ms)\n`;
-            outtext.value += `File valid: ${result} \n`;
-            if(!result) {
-                outtext.value += `====> Something wrong with the PDF file because it does not conform to the PDF spec, so this tool could not proceed to process it\n`;
-                outtext.value += `-----------\n\n`;
-                return;
+    <script>
+        (async function () {
+            if (!WebAssembly.instantiateStreaming) { // polyfill
+                WebAssembly.instantiateStreaming = async (resp, importObject) => {
+                    const source = await (await resp).arrayBuffer()
+                    return await WebAssembly.instantiate(source, importObject)
+                }
             }
+            document.getElementById("go").onclick = function () {
+                processPDF(document.getElementById('file').files[0])
+            };
+            let outtext = document.querySelector("#outtext");
+            let st = Date.now();
+            outtext.value += `依存するWebAssembly Workerをインストールします(経過時間: 0ms)\n`;
+            let GoWorker = Comlink.proxy(new Worker('worker.js'));
+            console.log("pre inst");
+            let worker = await new GoWorker();
+            console.log("post inst");
+            outtext.value += `pdfcpuのインストールが完了しました。(経過時間: ${Date.now() - st} ms)\n`;
+
+            async function processPDF(file) {
+                let st = Date.now();
+                outtext.value += `${file.name} を読み込んでいます...\n`;
+                let reader = new FileReader();
+                async function callback(e) {
+                    outtext.value += `読み込み完了 (経過時間: ${Date.now() - st} ms)\n`;
+
+                    let buffer = e.target.result.slice();
+
+                    st = Date.now();
+                    outtext.value += "ファイルチェック...\n";
+                    let pwd = document.querySelector("#pwd").value;
+                    let result = await worker.validate(buffer, pwd);
+                    outtext.value += `ファイルチェック完了。パスワードは正しいです。(経過時間: ${Date.now() - st} ms)\n`;
+                    outtext.value += `ファイルチェックの詳細: ${result} \n`;
+                    if (!result) {
+                        outtext.value += `====> ファイルチェックに失敗しました。\n`;
+                        outtext.value += `-----------\n\n`;
+                        return;
+                    }
 
 
-            st = Date.now();
-            outtext.value += "Extracting the first page to a separate PDF...\n";
-            // FIXME: extra copying of buffer
-            buffer = e.target.result.slice();
-            try {
-                result = await worker.extractPage(buffer, 1);
-                outtext.value += `DONE Extracting (took: ${Date.now() - st} ms)...\n`;
-                outtext.value += `-----------\n\n`;
+                    st = Date.now();
+                    outtext.value += "パスワードを解除しています\n";
+                    // FIXME: extra copying of buffer
+                    buffer = e.target.result.slice();
+                    try {
+                        let pwd = document.querySelector("#pwd").value;
+                        result = await worker.extractPage(buffer, pwd);
+                        outtext.value += `解除完了(経過時間: ${Date.now() - st} ms)...\n`;
+                        outtext.value += `-----------\n\n`;
 
-                download(new Blob([result]), 'first_page.pdf');
-            } catch(e) {
-                console.log("caught in index.html!", e);
-                outtext.value += `Error in extracting (took: ${Date.now() - st} ms)...\n`;
-                outtext.value += e + '\n';
-                outtext.value += `-----------\n\n`;
+                        download(new Blob([result]), 'decrypted_file.pdf');
+                    } catch (e) {
+                        console.log("caught in index.html!", e);
+                        outtext.value += `処理エラー (経過時間: ${Date.now() - st} ms)...\n`;
+                        outtext.value += e + '\n';
+                        outtext.value += `-----------\n\n`;
+
+                    }
+                }
+                reader.onload = callback;
+                reader.readAsArrayBuffer(file);
 
             }
-        }
-        reader.onload = callback;
-        reader.readAsArrayBuffer(file);
-
-    }
-})();
-</script>
+        })();
+    </script>
 </body>
+
 </html>
