--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/comlinkjs@3.1.1/umd/comlink.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.4/bluebird.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/1.4.3/eruda.min.js"></script>
+    <script>
+        eruda.init()
+    </script>
+    </script>
     <style>
         input, button {
             font-size: 1.1rem;
@@ -26,6 +31,7 @@
     <br />
     <button id="go">解除</button>
     <br /><br />
+    AndroidのChromeでは動かないことがあります。AndroidのFirefoxはたまにダウンロードに失敗しますが何回かやるといけます。
     <textarea id="outtext" style="max-width: calc(100vw - 32px); width: 800px; height: 500px;"></textarea>
 
     <div style="margin-top: 20px;"></div>
